--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -83,6 +83,29 @@
 % HPC and Parallel Computing Education
 % ========================================
 
+@article{mullen2021teaching,
+    title     = {Teaching and Learning HPC through Serious Games},
+    author    = {Mullen, Julia and Milechin, Lauren and Milechin, Dennis},
+    journal   = {Journal of Parallel and Distributed Computing},
+    volume    = {158},
+    pages     = {115--125},
+    year      = {2021},
+    publisher = {Elsevier},
+    doi       = {10.1016/j.jpdc.2021.08.002}
+}
+
+@article{brodanac2022parallel,
+    title     = {Has the Time Come to Teach Parallel Programming to Secondary School Students?},
+    author    = {Bro{\dj}anac, Predrag and Novak, Josip and Boljat, Ivica},
+    journal   = {Heliyon},
+    volume    = {8},
+    number    = {1},
+    pages     = {e08662},
+    year      = {2022},
+    publisher = {Elsevier},
+    doi       = {10.1016/j.heliyon.2022.e08662}
+}
+
 @book{pacheco2011introduction,
     title     = {An Introduction to Parallel Programming},
     author    = {Pacheco, Peter},
